[package]
name = "blueshift_native_amm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
constant-product-curve.workspace = true
pinocchio.workspace = true
pinocchio-associated-token-account.workspace = true
pinocchio-system.workspace = true
pinocchio-token.workspace = true
